Added note indicating paper will need to change depending on how guessFPT changes

--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -413,7 +413,7 @@ o17 : QQ
 \end{MyVerbatim}
 }
 
-            If neither endpoint is the $F$-pure threshold and {\tt Attempts} is set to more than {\tt 2}, then  additional checks are performed at certain numbers within the interval .  A number in the interval \eqref{estimating-interval: e} with minimal denominator is selected, and {\tt compareFPT} is used to test that number. If that ``guess" is correct, its value is returned; otherwise, the information returned by {\tt compareFPT} is used to narrow down the interval, and this process is repeated as many times as specified by {\tt Attempts}.
+            If neither endpoint is the $F$-pure threshold and {\tt Attempts} is set to more than {\tt 2}, then  additional checks are performed at certain numbers within the interval .  A number in the interval \eqref{estimating-interval: e} with minimal denominator is selected, and {\tt compareFPT} is used to test that number. {\color{red} This will need to get updated} If that ``guess" is correct, its value is returned; otherwise, the information returned by {\tt compareFPT} is used to narrow down the interval, and this process is repeated as many times as specified by {\tt Attempts}.
 
 {\small
 \setstretch{.67}
