Minor change to FThresholds paper

--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -84,7 +84,7 @@ urlcolor=OliveGreen
 \author[]{Emily E.\ Witt}
 \address{Department of Mathematics, University of Kansas, Lawrence, KS~66045, USA}
 \email{witt@ku.edu}
-\thanks{E.E.~Witt was partially supported by NSF DMS \#1623035.}
+\thanks{E.~E.~Witt was partially supported by NSF DMS \#1623035.}
 \date{\today}
 
 \begin{abstract}
