Minor changes to abstract of FThresholds

--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -89,7 +89,7 @@ urlcolor=OliveGreen
 
 \begin{abstract}
    This note describes the functionality implemented in the \emph{Macaulay2} package \emph{FThresholds}.
-   This package is designed to compute and estimate $F$-pure thresholds, more general $F$-thresholds, and related numerical invariants arising in the study of regularity conditions in positive characteristic commutative algebra.
+   This package is designed to compute and estimate $F$-pure thresholds, more general $F$-thresholds, and related numerical invariants used to study singularities in positive characteristic.
 \end{abstract}
 
 
