--- a/Fsing/FThresholdsPaper/MainBib.bib
+++ b/Fsing/FThresholdsPaper/MainBib.bib
@@ -8,6 +8,25 @@
 \hskip-1\wd7\penalty 10000\box7} "
 }
 
+
+@Misc{TestIdealsPackage,
+  Title                    = {{TestIdeals}, a package for calculations of singularities in positive characteristic},
+
+  Author                   = {Bela, E. AND Boix, A. F. AND Bruce, J. AND Ellingson, D. AND Hern\'andez, D. J. AND Kadyrsizova, Z. AND Katzman, M. AND Malec, S. AND Mastroeni, M. AND Mostafazadeh\-fard, M. AND Robinson, M. AND Schwede, K. AND Smolkin, D. AND Teixeira, P. AND Witt, E. E.},
+  HowPublished             = {available at \url{https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages/TestIdeals}},
+  Url                      = {https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages/TestIdeals}
+}
+
+
+@ARTICLE{TestIdealsPaper,
+  author = {Boix, A. F. AND Hern\'andez, D. J. AND Kadyrsizova, Z. AND Katzman, M. AND Malec, S. AND Mastroeni, M. AND Mostafazadeh\-fard, M. AND Robinson, M. AND Schwede, K. AND Smolkin, D. AND Teixeira, P. AND Witt, E. E.},
+  title = {{The TestIdeals Package for Macaulay2}},
+  journal = {Preprint available at arxiv.org/pdf/1810.02770},
+  year = {2018},
+  fjournal = {Preprint available at arxiv.org/pdf/1810.02770}
+}
+
+
 @ARTICLE{`AlvarezMontaner2012,
   author = {{\`A}lvarez Montaner, J., and Boix, A. F., and Zarzuela, S.},
   title = {Frobenius and {C}artier algebras of {S}tanley-{R}eisner rings},
