--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -20,7 +20,6 @@ menucolor=Yellow,
 urlcolor=OliveGreen
 }
 \usepackage{xspace}
-%\usepackage{rotating}
 \interfootnotelinepenalty=100000
 
 \usepackage{mabliautoref}
@@ -89,6 +88,10 @@ urlcolor=OliveGreen
 \maketitle
 \end{nouppercase}
 
+% \begin{center}
+% {\large \textbf{The \emph{FrobeniusThresholds} package for \emph{Macaulay2}}}
+% \end{center}
+
 \section{Introduction}
 
 This paper describes the \emph{Macaulay2} \cite{M2} package \emph{FrobeniusThresholds}, which provides tools for computing certain fundamental invariants arising in positive characteristic commutative algebra.  More precisely, this package concerns the effective computation of \emph{$F$-pure thresholds}, \emph{$F$-thresholds}, and \emph{$F$-jumping exponents}.
@@ -140,18 +143,21 @@ We conclude this subsection by briefly reviewing some natural generalizations.  
 %
 \[ \nu_I^J(p^e) = \max \{ n : I^n \notin J^{[p^e]} \}. \]  
 Otherwise, we set $\nu_I^J(p^e) = \infty$.  
-
 This clearly generalizes the quantity $\nu_f^{\idealm}(p^e)$ considered earlier, and we call 
 \[ \ft^J(I) := \lim_{e \to \infty} \frac{ \nu_f^{\idealm}(p^e)}{p^e} \]
-the \emph{$F$-threshold of $I$ with respect to $J$}.  These numbers are also rational, when finite, and we call the quantity $\ft^{\idealm}(I)$ the $F$-pure threshold of the ideal $I$.  Like $F$-pure thresholds, the $F$-thresholds of $I$ can also be defined in terms of its test ideals.
+the \emph{$F$-threshold of $I$ with respect to $J$}.  These numbers are also rational, when they are finite.
+If $I = (f)$ is principal, then we call $\ft^{J}(f) := \ft^J(I)$  the \emph{$F$-threshold of $f$ with respect to $J$}, 
+and $\ft^{\idealm}(I)$ is the \emph{$F$-pure threshold of $I$}. 
+Like $F$-pure thresholds, the $F$-thresholds of $I$ can also be defined in terms of its test ideals.
+
 
 \subsection*{Organization}
 
 There are three main sections in this paper, which describe and illustrate the main functionality implemented in the package \emph{FrobeniusThresholds}.
 \begin{itemize}
-\item \autoref{sec.Nu} describes the methods for approximating the $F$-pure threshold and other $F$-thresholds.  
-\item \autoref{sec.IsFPT} explains the functionality for determining whether a given number is the $F$-pure threshold, or more generally, an \emph{$F$-jumping exponent}.
-\item \autoref{sec.FPT} describes the features of the central function of the package, {\tt fpt}. 
+\item[$\circ$] \autoref{sec.Nu} describes the methods for approximating the $F$-pure threshold and other $F$-thresholds.  
+\item[$\circ$] \autoref{sec.IsFPT} explains the functionality for determining whether a given number is the $F$-pure threshold, or more generally, an \emph{$F$-jumping exponent}.
+\item[$\circ$] \autoref{sec.FPT} describes the features of the central function of the package, {\tt fpt}. 
 \end{itemize}
 This package builds heavily upon the \emph{TestIdeals} package for \emph{Macaulay2}, which provides a broad range of functionality in prime characteristic commutative algebra. 
 
@@ -159,10 +165,9 @@ This package builds heavily upon the \emph{TestIdeals} package for \emph{Macaula
 Our package coauthors are Dan Smolkin (LIST MORE NAMES), and Zhibek Kadyrsizova, Moty Katzman (LIST MORE NAMES) contributed valuable code to the package. 
 %Erin Bela, Juliette Bruce, Sara Malec, Maral Mostafazadehfard, Marcus Robinson, Matthew Mastroeni
 
+Thanks go to the organizers of the \emph{Macaulay2} workshops where much of the functionality described herein was developed, hosted by Wake Forest University in 2012, the University of California, Berkeley in 2014 and 2017, Boise State University in 2015, and the University of Utah in 2016. 
 
-Many thanks go to the organizers of the \emph{Macaulay2} workshops where much of the functionality described herein was developed, hosted by Wake Forest University in 2012, the University of California, Berkeley in 2014 and 2017, Boise State University in 2015, and the University of Utah in 2016. 
-
-Finally, we are also grateful to the University of Utah for hosting a collaborative development visit in 2018, and to the Institute of Mathematics and its Applications for its generous support for our 2019 Coding Sprint. 
+Finally, we are grateful to the University of Utah for hosting a collaborative development visit in 2018, and to the Institute of Mathematics and its Applications for its generous support for our 2019 Coding Sprint. 
 The current version of the package was finalized during these events.
 
 \section{The {\tt nu} function}
@@ -170,10 +175,11 @@ The current version of the package was finalized during these events.
 
 {\color{red} This section will need to be modified so that it is consistent with the introduction section.  The point is that a lot of the notation repeated here was introduced earlier there.}
 
-We now consider the {\tt nu} function, which is fundamental.   As in the introduction, we work in a polynomial ring over a finite field of characteristic $p>0$.
+We first consider the {\tt nu} function, a fundamental component of the package \emph{FrobeniusThresholds}.   As in the introduction, in this section we work in a polynomial ring over a finite field of characteristic $p>0$.
 
-
-Fix a natural number $e$.  If $f$ is polynomial contained in the radical of an ideal $J$, then the command {\tt nu(e,f,J)} outputs $\nu_f^J(p^e)$, the maximal integer exponent such that $f^n$ is not contained in $J^{[p^e]}$.  More generally, if $I$ is an ideal contained in the radical of $J$, then {\tt nu(e,I,J)} outputs $\nu_I^J(p^e)$, the maximal integer exponent $n$ such that $I^n$ is not contained in $J^{[p^e]}$.
+Fix a natural number $e$.  If $f$ is a nonzero polynomial contained in the radical of an ideal $J$, then the command {\tt nu(e,f,J)} outputs the integer $\nu_f^J(p^e)$ defined in the introduction, and 
+%, the maximal integer exponent such that $f^n$ is not contained in $J^{[p^e]}$.  
+more generally, if a nonzero ideal $I$ is contained in the radical of $J$, then {\tt nu(e,I,J)} outputs $\nu_I^J(p^e)$. Consider the following example.  %, the maximal integer exponent $n$ such that $I^n$ is not contained in $J^{[p^e]}$.
 
 {\small
 \setstretch{.67}
@@ -200,6 +206,7 @@ i6 : nu(1, f, J)
 o6 = 10
 \end{MyVerbatim}
 }
+\medspace
 
 %R = ZZ/11[x,y];
 %I = ideal(x^2 + y^3, x*y);
@@ -208,7 +215,7 @@ o6 = 10
 %f = x*y*(x^2 + y^2);
 %nu(1, f, J)
 
-We highlight some degenerate cases:  If $f$ is zero, then the output of {\tt nu(e,f,J)} is {\tt 0}, and if $f$ is not contained in the radical of $J$, then the output is instead {\tt infinity}.  These degenerate cases extend analogously to {\tt nu(e,I,J)} when $I$ is an ideal.
+We highlight some degenerate cases:  If $f$ is the zero polynomial, then {\tt nu(e,f,J)} outputs {\tt 0}, and if $f$ is \emph{not} contained in the radical of $J$, then the output is instead {\tt infinity}.  These degenerate cases extend analogously to the command {\tt nu(e,I,J)}.
 
 {\small
 \setstretch{.67}
@@ -225,11 +232,12 @@ o8 = infinity
 o8 : InfiniteNumber
 \end{MyVerbatim}
 }
+\medspace
 
 %nu(1, 0_R, J)
 %nu(1, 1_R, J)
 
-It is possible to omit the third argument from the function {\tt nu};  in this case, the function assumes that the omitted third argument is the maximal generated by the variables in the ambient polynomial ring.
+If the third argument is omitted from the function {\tt nu}, the third argument is assumed to be the homogeneous maximal ideal of the polynomial ring. 
 
 {\small
 \setstretch{.67}
@@ -248,36 +256,41 @@ i12 : nu(2, f) == nu(2, f, M)
 o12 = true
 \end{MyVerbatim}
 }
+\medspace
 
 %R = ZZ/17[x,y,z];
 %f = x^3 + y^4 + z^5;
 %M = ideal(x, y, z);
 %nu(2, f) == nu(2, f, M)
 
-It is well-known that if $q=p^e$ for some nonnegative integer $e$, then \[ \nu_I^J(qp) = \nu_I^J(q)\cdot p + L\]  where the error term $L$ is nonnegative, and can be explicitly bounded from above in terms of $p$ and the number of generators of $I$ and $J$.  For instance, the error term $L$ is at most $p-1$ when $I$ is principal and $J$ is arbitrary.
+It is well known that if $q=p^e$ for some nonnegative integer $e$, then \[ \nu_I^J(qp) = \nu_I^J(q)\cdot p + L\]  where the error term $L$ is nonnegative, and can be explicitly bounded from above in terms of $p$ and the number of generators of $I$ and $J$.  For instance, the error term $L$ is at most $p-1$ when $I$ is principal and $J$ is arbitrary.
 
-This implies that when searching for the maximal exponent defining {\tt nu(e,I,J)} when $e$ is positive, it is always safe to start at $p$ times the output of {\tt nu(e-1,I,J)}, and one needn't search too far past this number.  This also suggests that the most efficient way to compute {\tt nu(e,I,J)} is to compute, successively, {\tt nu(s,I,J)}, for each {\tt s = 0,\ldots,e}.  This is indeed how the computation is done in most cases.
+This implies that when searching for the maximal exponent defining {\tt nu(e,I,J)} for positive $e$, it is safe to start at $p$ times the output of {\tt nu(e-1,I,J)}, and one needn't search too far past this number.  This also suggests that the most efficient way to compute {\tt nu(e,I,J)} is to compute, successively, {\tt nu(s,I,J)}, for each $s = 0,\ldots,e$.  This is indeed how the computation is done in most cases.
 
 {\color{red} Make this consistent with the introduction.  The point is that we have already described how to get the {\tt nu}-s from their limit.  Maybe we should directly cite }.  
-If $M$ is the homogeneous maximal ideal of $R$ and $f$ is an element of $R$, the numbers $\nu_f^M(p^e)$ determine and are determined by the $F$-pure threshold of $f$ at the origin.  Indeed, $\nu_f^M(p^e)$ is $p^e$ times the truncation of the non-terminating base $p$ expansion of fpt($f$) at its $e^{\textrm{th}}$ spot.  This fact is used to speed up the computations for certain polynomials whose $F$-pure thresholds can be quickly computed via special algorithms, namely diagonal polynomials and binomials.  This feature can be disabled by setting the option {\tt UseSpecialAlgorithms} (default value {\tt true}) to {\tt false}.
+
+As pointed out in the introduction, if $\mathfrak{m}$ is the homogeneous maximal ideal and $f \in \mathfrak{m}$, then for all $e$, the values $\nu^{\mathfrak{m}}_f(p^e)$ can be recovered from the $F$-pure threshold of $f$.  
+This fact is used to speed up computations for certain polynomials whose $F$-pure thresholds can be computed quickly via specialized algorithms, namely diagonal polynomials, binomials, and forms in two variables (see Section \ref{sec.FPT}).  This feature can be disabled by setting the option {\tt UseSpecialAlgorithms} (default value {\tt true}) to {\tt false}.
 
 %R = ZZ/17[x,y,z];
 %f = x^3 + y^4 + z^5; -- a diagonal polynomial
 %time nu(3, f)
 %time nu(3, f, UseSpecialAlgorithms => false)
 
-The valid values for the option {\tt ContainmentTest} are {\tt FrobeniusPower}, {\tt FrobeniusRoot}, and {\tt StandardPower}. The default value of this option depends on what is passed to {\tt nu}. Indeed, by default, {\tt ContainmentTest} is set to {\tt FrobeniusRoot} if {\tt nu} is passed a ring element $f$, and is set to {\tt StandardPower} if {\tt nu} is passed an ideal $I$.  We describe the consequences of setting {\tt ContainmentTest} to each of these values below.
+The option {\tt ContainmentTest} for the function {\tt nu} can be set to {\tt FrobeniusPower}, {\tt FrobeniusRoot}, or {\tt StandardPower}. The default value of this option depends on what is passed to {\tt nu}. Indeed, by default, {\tt ContainmentTest} is set to {\tt FrobeniusRoot} if the second argument passed to {\tt nu} is a polynomial, and is set to {\tt StandardPower} if it is an ideal.  We describe the consequences of setting {\tt ContainmentTest} to each of these values below, using an ideal $I$ as the second argument of $\nu$, since the option works analogously when $I$ is replaced with a polynomial $f$. 
 
-First, if {\tt ContainmentTest} is set to {\tt StandardPower}, then the ideal containments checked when computing {\tt nu(e,I,J)} are verified directly.  That is, the standard power $I^n$ is first computed, and a check is then run to see if it lies in the $p^e$-th Frobenius power of $J$.
 
-Alternately, if {\tt ContainmentTest} is set to {\tt FrobeniusRoot}, then the ideal containments are verified using Frobenius Roots.  That is, the $p^e$-th Frobenius root of $I^n$ is first computed, and a check is then run to see if it lies in $J$.  The output is unaffected, but this option often speeds up computations, specially when a polynomial or principal ideal is passed as the second argument.
+First, if {\tt ContainmentTest} is set to {\tt StandardPower}, then the ideal containments checked when computing {\tt nu(e,I,J)} are verified directly.
+That is, a standard power of $I$ is first computed, say $I^n$, and a check is then run to see if the resulting ideal lies in the $p^e$-th Frobenius power of $J$.
+Alternately, if {\tt ContainmentTest} is set to {\tt FrobeniusRoot}, then the ideal containments are verified through the computation of Frobenius roots.  That is, the $p^e$-th Frobenius root of $I^n$ is first computed, and a check is then run to see if it lies in $J$.  The output is unaffected, but this option often speeds up computations, especially when a polynomial or principal ideal is passed as the second argument.
 
 %R = ZZ/11[x,y,z];
 %f = x^3 + y^3 + z^3 + x*y*z;
 %time nu(3, f) -- ContainmentTest is set to FrobeniusRoot, by default
 %time nu(3, f, ContainmentTest => StandardPower)
 
-Finally, when {\tt ContainmentTest} is set to {\tt FrobeniusPower}, then instead of producing the invariant $\nu_I^J(p^e)$ as defined above, {\tt nu(e,I,J,ContainmentTest=>FrobeniusPower)} instead outputs the maximal integer $n$ such that the $n^{\textrm{th}}$ (generalized) Frobenius power of $I$ is not contained in the $p^e$-th Frobenius power of $J$.
+Finally, suppose that {\tt ContainmentTest} is set to {\tt FrobeniusPower}.  Instead of producing the invariant $\nu_I^J(p^e)$, in this case the {\tt nu} function instead outputs the maximal integer $n$ such that the $n^{\textrm{th}}$ (generalized) Frobenius power of $I$ is not contained in the $p^e$-th Frobenius power of $J$ \cite{hernandez+etal.frobenius_powers}.  Note that this coincides with $\nu_I^J(p^e)$ when $I$ is replaced with a polynomial, or is a principal ideal.
+After appropriately normalizing and taking the limit of these values as $e$ approaches infinity, these new values limit to certain \emph{critical exponents} (see \emph{loc.~cit.}).
 
 Here, the $n^{\textrm{th}}$ Frobenius power of $I$, when $n$ is a nonnegative integer, is as defined in the paper {\it Frobenius Powers} by Hernández, Teixeira, and Witt.
 In particular, {\tt nu(e,I,J)} and {\tt nu(e,I,J,ContainmentTest=>FrobeniusPower)} need not agree.  However, they will agree when $I$ is a principal ideal.
@@ -401,22 +414,22 @@ The following example illustrates this functionality.
 \setstretch{.67}
 \begin{MyVerbatim}
 
-i1 : R = ZZ/11[x, y, z]/( x^2 - y*( z - 1 ) );
+i1 : R = ZZ/11[x, y, z]/(x^2 - y*(z - 1));
 
-i2 : compareFPT( 5/11, z - 1 )
+i2 : compareFPT(5/11, z - 1)
 
 o2 = -1
 
-i3 : isFPT( 1/2, z - 1 )
+i3 : isFPT(1/2, z - 1)
 
 o3 = true
 
-i4 : isFPT( 1/2, z - 1, IsLocal => true )
+i4 : isFPT(1/2, z - 1, IsLocal => true)
 
-o4 : false
-
+o4 = false
 \end{MyVerbatim}
 }
+\medspace
 
 The general method applied calls upon functionality from the \emph{TestIdeals} package \cite{TestIdealsPackage, TestIdealsPaper}.  The functions {\tt testIdeal} and {\tt FPureModule} therein are used
 to compute the test ideals of $f$ with respect to the parameter $t$, and that with respect to $t - \varepsilon$, for $\varepsilon>0$ very small. For instance, as noted in the introduction, when $R$ is a polynomial ring, $t$ is the $F$-pure threshold of $f$ if and only if $\tau(R, f^t)$ is contained in the homogeneous maximal ideal, but 
@@ -433,19 +446,15 @@ Analogous syntax is used, as shown in the following example.
 
 i49 : R = ZZ/13[x, y];
 
-i50 : f = y*( ( y + 1 ) - ( x - 1 )^2 )*( x - 2 )*( x + y - 2 );
+i50 : f = y*((y + 1) - (x - 1)^2)*(x - 2)*(x + y - 2);
 
-i51 : isFJumpingExponent( 3/4, f )
+i51 : isFJumpingExponent(3/4, f)
 
 o51 = true
-
 \end{MyVerbatim}
 }
+\medspace
 
-
-
-
-\newpage
 \section{The {\tt fpt} function}
 \label{sec.FPT}
 
@@ -457,7 +466,7 @@ The core function in this package is the {\tt fpt} function.  Throughout this se
 
 i1 : ZZ/5[x,y,z];
 
-i2 : fpt( x^3 + y^3 + z^3 + x*y*z )
+i2 : fpt(x^3 + y^3 + z^3 + x*y*z)
 
      4
 o2 = -
@@ -465,31 +474,31 @@ o2 = -
 
 o2 : QQ
 
-i3 : fpt( x^5 + y^6 + z^7 + (x*y*z)^3 )
+i3 : fpt(x^5 + y^6 + z^7 + (x*y*z)^3)
 
       1  2
 o3 = {-, -}
       3  5
 
 o3 : List
-
 \end{MyVerbatim}
 }
+\medspace
 
-             If the option {\tt UseSpecialAlgorithms} is set to {\tt true} (the default value), then {\tt fpt} first checks whether $f$ is a diagonal polynomial, a binomial, or a form in two variables, in that order.
-             If it is one of these, algorithms of Hern\'andez \cite{HernandezFInvariantsOfDiagonalHyp, HernandezFPureThresholdOfBinomial}, or Hern\'andez and Teixeira \cite{HernandezTeixeiraFThresholdFunctions},  are executed to compute the $F$-pure threshold (cf. \cite{ShibutaTakagiLCThresholds}).
+If the option {\tt UseSpecialAlgorithms} is set to {\tt true} (the default value), then {\tt fpt} first checks whether $f$ is a diagonal polynomial, a binomial, or a form in two variables, in that order.
+If it is one of these, algorithms of Hern\'andez \cite{HernandezFInvariantsOfDiagonalHyp, HernandezFPureThresholdOfBinomial}, or Hern\'andez and Teixeira \cite{HernandezTeixeiraFThresholdFunctions},  are executed to compute the $F$-pure threshold (cf. \cite{ShibutaTakagiLCThresholds}).
 
 {\small
 \setstretch{.67}
 \begin{MyVerbatim}
 
-i4 : fpt( x^17 + y^20 + z^24 ) -- a diagonal polynomial
+i4 : fpt(x^17 + y^20 + z^24) -- a diagonal polynomial
 
       94
 o4 = ---
      625
 
-i5 : fpt( x^2*y^6*z^10 + x^10*y^5*z^3 ) -- a binomial
+i5 : fpt(x^2*y^6*z^10 + x^10*y^5*z^3) -- a binomial
 
       997
 o5 = ----
@@ -499,18 +508,18 @@ o5 : QQ
 
 i6 : ZZ/5[x,y];
 
-i7 : fpt( x^2*y^6*(x + y)^9*(x + 3*y)^10 ) -- a form in two variables
+i7 : fpt(x^2*y^6*(x + y)^9*(x + 3*y)^10) -- a form in two variables
 
       5787
 o7 = -----
      78125
 
 o7 : QQ
-
 \end{MyVerbatim}
 }
+\medspace
 
-            The above noted algorithm for computing the $F$-pure threshold of a binary form $f$ requires factoring $f$ into linear forms, and {\tt fpt} can sometimes hang when attempting that factorization. For this reason, when a factorization is already known, the user can pass to {\tt fpt} a list containing all the pairwise prime linear factors of $f$, and a list containing their respective multiplicities.
+The above noted algorithm for computing the $F$-pure threshold of a binary form $f$ requires factoring $f$ into linear forms, and {\tt fpt} can sometimes hang when attempting that factorization. For this reason, when a factorization is already known, the user can pass to {\tt fpt} a list containing all the pairwise prime linear factors of $f$, and a list containing their respective multiplicities.
 
 {\small
 \setstretch{.67}
@@ -520,12 +529,12 @@ i8 : L = {x, y, x + y, x + 3*y};
 
 i9 : m = {2, 6, 9, 10};
 
-i10 : fpt(L, m)==o7
+i10 : fpt(L, m) == o7
 
 o10 = true
-
 \end{MyVerbatim}
 }
+\medspace
 
 In the remainder of this section, we describe the {\tt fpt} function when no special algorithm is available, or {\tt UseSpecialAlgorithms} is set to {\tt false},  as well as the roles of the options {\tt DepthOfSearch}, and {\tt Attempts}, both nonnegative integers.
 
@@ -547,7 +556,7 @@ With these estimates in hand, the subroutine {\tt guessFPT} is called to make so
 
 i11 : f = x^2*(x + y)^3*(x + 3*y^2)^5;
 
-i12 : fpt( f, Attempts => 0 ) -- a bad estimate
+i12 : fpt(f, Attempts => 0) -- a bad estimate
 
           1
 o12 = {0, -}
@@ -555,7 +564,7 @@ o12 = {0, -}
 
 o12 : List
 
-i13 : fpt( f, Attempts => 0, DepthOfSearch => 3 ) -- a better estimate
+i13 : fpt(f, Attempts => 0, DepthOfSearch => 3) -- a better estimate
 
         21   22
 o13 = {---, ---}
@@ -563,7 +572,7 @@ o13 = {---, ---}
 
 o13 : List
 
-i14 : fpt( f, Attempts => 1, DepthOfSearch => 3 ) -- the right-hand
+i14 : fpt(f, Attempts => 1, DepthOfSearch => 3) -- the right-hand
 
       endpoint (nu+1)/p^e is the F-pure threshold
 
@@ -584,7 +593,7 @@ If  {\tt Attempts} is set to at least {\tt 2} and the right-hand endpoint $(\nu+
 
 i15 : f = x^6*y^4 + x^4*y^9 + (x^2 + y^3)^3;
 
-i16 : fpt( f, Attempts => 1, DepthOfSearch => 3 )
+i16 : fpt(f, Attempts => 1, DepthOfSearch => 3)
 
        17   7
 o16 = {--, --}
@@ -592,7 +601,7 @@ o16 = {--, --}
 
 o16 : List
 
-i17 : fpt( f, Attempts => 2, DepthOfSearch => 3 ) -- the left-hand endpoint
+i17 : fpt(f, Attempts => 2, DepthOfSearch => 3) -- the left-hand endpoint
 
       nu/(p^e-1) is the F-pure threshold
 
@@ -605,7 +614,7 @@ o17 : QQ
 \end{MyVerbatim}
 }
 
-            If neither endpoint is the $F$-pure threshold and {\tt Attempts} is set to more than {\tt 2}, then  additional checks are performed at certain numbers within the interval, chosen according to the criteria determined by the value of the option {\tt GuessStrategy}.  We refer the reader for the documentation of this strategy for more details.
+If neither endpoint is the $F$-pure threshold and {\tt Attempts} is set to more than {\tt 2}, then  additional checks are performed at certain numbers within the interval, chosen according to the criteria determined by the value of the option {\tt GuessStrategy}.  We refer the reader for the documentation of this strategy for more details.
 
 {\color{red}  This will need to be updated.  Maybe look at Pedro's new documentation.}            
             
@@ -615,7 +624,7 @@ o17 : QQ
 
 i18 : f = x^3*y^11*(x + y)^8*(x^2 + y^3)^8;
 
-i19 : fpt( f, DepthOfSearch => 3, Attempts => 2 )
+i19 : fpt(f, DepthOfSearch => 3, Attempts => 2)
 
         3   7
 o19 = {--, ---}
@@ -623,7 +632,7 @@ o19 = {--, ---}
 
 o19 : List
 
-i20 : fpt( f, DepthOfSearch => 3, Attempts => 3 ) -- an additional check
+i20 : fpt(f, DepthOfSearch => 3, Attempts => 3) -- an additional check
 
       sharpens the estimate
 
@@ -633,7 +642,7 @@ o20 = {--, --}
 
 o20 : List
 
-i21 : fpt( f, DepthOfSearch => 3, Attempts => 4 ) -- and one more finds
+i21 : fpt(f, DepthOfSearch => 3, Attempts => 4) -- and one more finds
 
       the answer
 
@@ -642,10 +651,9 @@ o21 = --
       19
 
 o21 : QQ
-
 \end{MyVerbatim}
 }
-
+\medspace
 
 If {\tt guessFPT} is unsuccessful and {\tt UseFSignature} is set to {\tt true}, then the {\tt fpt} function proceeds to use the convexity of the $F$-signature function and a secant line argument to attempt to narrow down the interval bounding the $F$-pure threshold.
 
@@ -655,7 +663,7 @@ If {\tt guessFPT} is unsuccessful and {\tt UseFSignature} is set to {\tt true}, 
 
 i22 : f = x^5*y^6*(x + y)^9*(x^2 + y^3)^4;
 
-i23 : fpt( f, DepthOfSearch => 3 )
+i23 : fpt(f, DepthOfSearch => 3)
 
         2   1
 o23 = {--, --}
@@ -663,7 +671,7 @@ o23 = {--, --}
 
 o23 : List
 
-i24 : fpt( f, DepthOfSearch => 3, UseFSignature => true )
+i24 : fpt(f, DepthOfSearch => 3, UseFSignature => true)
 
         181   1
 o24 = {----, --}
@@ -682,9 +690,9 @@ i26 : numeric o24 -- UseFSignature sharpened the estimate a bit
 o26 = {.0658182, .0714286}
 
 o26 : List
-
 \end{MyVerbatim}
 }
+\medspace
 
 When {\tt FRegularityCheck} is set to {\tt true} and no exact answer has been found, a final check is run to verify whether the final lower bound for the $F$-pure threshold is the exact answer (if it has not already been eliminated as a possibility).
 
@@ -702,9 +710,9 @@ o28 = {--, ---}
 
 o28 : List
 
-i29 : fpt( f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true ) --
+i29 : fpt(f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true) 
 
-      UseFSignature improves the answer a bit
+      -- UseFSignature improves the answer a bit
 
         1   13
 o29 = {--, ---}
@@ -712,18 +720,18 @@ o29 = {--, ---}
 
 o29 : List
 
-i30 : fpt( f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true,
+i30 : fpt(f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true,
 
-      FRegularityCheck => true ) -- FRegularityCheck finds the answer
+      FRegularityCheck => true) -- FRegularityCheck finds the answer
 
        1
 o30 = --
       10
 
 o30 : QQ
-
 \end{MyVerbatim}
 }
+\medspace
 
 The computations performed when {\tt UseFSignature} and {\tt FRegularityCheck} are set to {\tt true} are often slow, and often fail to improve the estimate, and for this reason, these options should be used sparingly.
             It is often more effective to increase the values of {\tt Attempts} or {\tt DepthOfSearch} instead.
@@ -734,16 +742,16 @@ The computations performed when {\tt UseFSignature} and {\tt FRegularityCheck} a
 
 i31 : f = x^7*y^5*(x + y)^5*(x^2 + y^3)^4;
 
-i32 : timing numeric fpt( f, DepthOfSearch => 3, UseFSignature => true,
+i32 : timing numeric fpt(f, DepthOfSearch => 3, UseFSignature => true,
 
-      FRegularityCheck => true )
+      FRegularityCheck => true)
 
 o32 = {.0733061, .0769231}
       -- 2.68899 seconds
 
 o32 : Time
 
-i33 : timing numeric fpt( f, Attempts => 5, DepthOfSearch => 3 ) -- a better
+i33 : timing numeric fpt(f, Attempts => 5, DepthOfSearch => 3) -- a better
 
       answer in less time
 
@@ -752,7 +760,7 @@ o33 = {.075, .0769231}
 
 o33 : Time
 
-i34 : timing fpt( f, DepthOfSearch => 4 ) -- the exact answer in even less
+i34 : timing fpt(f, DepthOfSearch => 4) -- the exact answer in even less
       time
 
        48
@@ -761,9 +769,9 @@ o34 = ---
       -- .361882 seconds
 
 o34 : Time
-
 \end{MyVerbatim}
 }
+\medspace
 
 As seen in several examples above, when the exact  $F$-pure threshold of $f$ is not found, a list containing the endpoints of an interval containing its value is returned.  Whether that interval is open, closed, or a mixed interval depends on the options passed; if the option {\tt Verbose} is set to {\tt true}, the precise interval will be printed.
 
@@ -773,7 +781,7 @@ As seen in several examples above, when the exact  $F$-pure threshold of $f$ is 
 
 i35 : f = x^7*y^5*(x + y)^5*(x^2 + y^3)^4;
 
-i36 : fpt( f, DepthOfSearch => 3, UseFSignature => true, Verbose => true )
+i36 : fpt(f, DepthOfSearch => 3, UseFSignature => true, Verbose => true)
 
 Starting fpt ...
 
@@ -816,11 +824,10 @@ o36 = {----, --}
        6125  13
 
 o36 : List
-
 \end{MyVerbatim}
 }
+\medspace
 
-\newpage
 \bibliographystyle{skalpha}
 \bibliography{MainBib}
 
