--- a/Fsing/FThresholdsPaper/MainBib.bib
+++ b/Fsing/FThresholdsPaper/MainBib.bib
@@ -8,6 +8,16 @@
 \hskip-1\wd7\penalty 10000\box7} "
 }
 
+@ARTICLE{hernandez+etal.frobenius_powers,
+  Title                    = {Frobenius powers},
+  Author                   = {Hern\'andez, D. J. AND Teixeira, P. AND Witt, E. E.},
+  Note                     = {preprint, \href{https://arxiv.org/abs/1802.02705}{arXiv:1802.02705 [math.AC]}},
+  Year                     = {2018},
+
+  Fauthor                  = {Hern\'andez, Daniel J. AND Teixeira, Pedro AND Witt, Emily E.},
+  Url                      = {https://arxiv.org/abs/1802.02705}
+}
+
 
 @Misc{TestIdealsPackage,
   Title                    = {{TestIdeals}, a package for calculations of singularities in positive characteristic},
